samples/_failures_safe/1761078261_fd8772_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4baccfd7.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_4baccfd7.c:156:5: error: expected declaration or statement at end of input
  156 |     if (fgets(input, sizeof(input), stdin) != NULL) {
      |     ^~
./samples/SAFE/__tmp_4baccfd7.c:156:5: error: expected declaration or statement at end of input
